<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="cursive"
            android:textColor="#ffa700"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:gravity="center"
            android:textSize="52sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/instructions"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/question_1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/choices_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/choice_1A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_1A"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_1B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_1B"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_1C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_1C"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_1D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_1D"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/question_2"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/choices_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/choice_2A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_2A"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_2B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_2B"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_2C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_2C"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_2D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_2D"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/question_3"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/choices_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/choice_3A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_3A"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_3B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_3B"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_3C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_3C"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_3D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_3D"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/question_4"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/choices_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/choice_4A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_4A"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_4B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_4B"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_4C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_4C"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_4D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_4D"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/question_5"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/choices_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/choice_5A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_5A"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_5B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_5B"
                android:textAppearance="?android:textAppearanceMedium" />


        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/question_6"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/choice_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/question_7"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/choices_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/choice_7A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_7A"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_7B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_7B"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_7C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_7C"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_7D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_7D"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/question_8"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/choices_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/choice_8A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_8A"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_8B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_8B"
                android:textAppearance="?android:textAppearanceMedium" />


        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/question_9"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/choices_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/choice_9A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_9A"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_9B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_9B"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_9C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_9C"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/choice_9D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choice_9D"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/question_10"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/choice_10A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_10A"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/choice_10B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_10B"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/choice_10C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_10C"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/choice_10D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_10D"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submitButton"
            android:onClick="calculateScore"
            android:textAllCaps="true" />


        <TextView
            android:id="@+id/scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text=""
            android:textColor="#ffa700"
            android:textSize="56sp" />

    </LinearLayout>
</ScrollView>


